# quadrille

./: MANIFEST.in  README.md  requirements.txt  setup.cfg
src/libmonty_sim_cogol/: __main__.py  cogol.py  network.py  version.py
src/libmonty_sim_cogol/data/: logger.ini
src/quadrille/: __main__.py  cogol.py  network.py  version.py
src/quadrille/data/: logger.ini
src/quadrille_lants/: README.md  __main__.py
src/quadrille_lants/components/: ant.py  cell.py  grid.py
src/quadrille_lants/data/: gamefile-1.txt  gamefile-2a.txt  gamefile-2b.txt  gamefile-3a.txt  gamefile-3b.txt
src/quadrille_lants/utils/: asciistyling.py  codec.py  outputmessages.py  regex.py
