[metadata]
name = libmonty-sim-cogol
version = attr: libmonty_sim_cogol.version.__version__
url = https://github.com/sunarch/libmonty-sim-cogol
project_urls =
    Bug Tracker = https://github.com/sunarch/libmonty-sim-cogol/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment :: Simulation
    Topic :: System :: Networking
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = "libmonty - Simulation - Conway's Game of Life"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = libmonty, sim, simulation, Conway, game of life
platforms = Any

[options]
python_requires = >=3.9
packages = find:
package_dir =
    = src
scripts =
    bin/libmonty-sim-cogol

[options.entry_points]
console_scripts =
    libmonty-sim-cogol = libmonty_sim_cogol.__main__:main

[options.packages.find]
where = src

[options.package_data]
    libmonty-sim-cogol = data/logger.ini
