[metadata]
name = quadrille
version = attr: quadrille.version.__version__
url = https://github.com/sunarch/quadrille
project_urls =
    Bug Tracker = https://github.com/sunarch/quadrille/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment :: Simulation
    Topic :: System :: Networking
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = quadrille - square grid simulations
long_description = file: README.md
long_description_content_type = text/markdown
keywords = quadrille, sim, simulation, Conway, game of life, langton, ant
platforms = Any

[options]
install_requires = file: requirements.txt
python_requires = >=3.9
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    quadrille-cogol = quadrille.__main__:main
    quadrille-lants = quadrille_lants.__main__:main

[options.packages.find]
where = src

[options.package_data]
    quadrille_lants =
        data/gamefile-1.txt
        data/gamefile-2a.txt
        data/gamefile-2b.txt
        data/gamefile-3a.txt
        data/gamefile-3b.txt
